\name{DExMAnews}
\title{DExMA News}
\encoding{UTF-8}

\section{version 1.1.2}{
    \itemize{
    \item Weights added to the Stouffer's method
    }
}

\section{Version 0.99.0}{
  \itemize{
    \item DExMA release.
  }
}